clean up some headers, auto doc and todos
Former-commit-id: 884d25f8467c84bb4caa47e0fb1a5d33a3d3c792

--- a/style.css
+++ b/style.css
@@ -119,3 +119,23 @@ img.center
   margin-left: auto;
   margin-right: auto;
 }
+
+.article_body
+{
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  background-color: #bbb;
+}
+
+.article
+{
+  font-size: 14pt;
+  background-color: #fff;
+  margin:0px auto;
+  padding: 20px;
+  border-left: 1px solid #888;
+  border-right: 1px solid #888;
+  width: 960px;
+  text-align: left;
+}
