better assertions, diag is obsolete, min_quad_with_fixed supports linearly dependent Aeq constraints, but Eigen's sparseQR is not giving a sparse Q so this is a huge bottleneck (dense)
Former-commit-id: dd3d02fb6aad5122f92c8de7e72d7fc1de182fda

--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ ul
   padding: 0px 20px;
   list-style-type:none;
 }
+li { padding-left: 30px;text-indent: -30px;}
 li { font-size: 100% }
 li li { font-size: 90% }
 li li li { font-size: 80% }
