--- a/tutorial/style.css
+++ b/tutorial/style.css
@@ -40,7 +40,13 @@ body
 
 img
 {
-  max-width: 650px;
+  max-width: 600px;
+}
+
+figure
+{
+  margin: 0px auto;
+  width: 600px;
 }
 
 figcaption
@@ -159,16 +165,16 @@ h1 {
 }
 
 h2 {
-  font-size: 1.4em;
+  font-size: 1.3em;
   border-bottom: 1px solid #eee;
 }
 
 h3 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 
 h4 {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 h5 {
