--- a/tutorial/style.css
+++ b/tutorial/style.css
@@ -36,6 +36,7 @@ body
   border-right: 1px solid #888;
   width: 765px;
   text-align: left;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
 img
